kubernetes/apps/apps/relay/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relay
  labels:
    app.kubernetes.io/part-of: relay
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
